--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "helmet": "^2.3.0",
+    "hosted-git-info": "^2.8.9",
     "jsdom": "^16.5.3",
     "marked": "^2.0.3",
     "mongoose": "^5.12.5"
