--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,36 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-.vscode/
 
 # dependencies
-/node_modules
+node_modules
 /.pnp
 .pnp.js
 
+.vscode
+
 # testing
 /coverage
+
+# next.js
+/.next/
+/out/
 
 # production
 /build
 
 # misc
 .DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-
-backend/.env
-backend/node_modules
-frontend/node_modules
-
+# vercel
+.vercel
