--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
+    "gray-matter": "^4.0.3",
     "next": "10.2.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-markdown": "5.0.3",
+    "react-syntax-highlighter": "^15.4.3",
+    "sass": "^1.35.0",
+    "use-dark-mode": "^2.3.1"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
+    "@types/react-syntax-highlighter": "^13.5.0",
     "typescript": "4.3.2"
   }
 }
