--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "dependencies": {
     "gray-matter": "^4.0.3",
     "next": "10.2.3",
+    "next-themes": "^0.0.15",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-markdown": "5.0.3",
-    "react-syntax-highlighter": "^15.4.3",
-    "use-dark-mode": "^2.3.1"
+    "react-syntax-highlighter": "^15.4.3"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
