--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
     "react-markdown": "5.0.3",
-    "react-syntax-highlighter": "^15.4.4"
+    "react-syntax-highlighter": "^15.4.4",
+    "react-use": "^17.3.1"
   },
   "devDependencies": {
     "@iconify/icons-akar-icons": "^1.1.23",
     "@iconify/icons-logos": "^1.1.10",
+    "@iconify/icons-ri": "^1.1.0",
     "@iconify/icons-simple-icons": "^1.1.45",
     "@iconify/icons-teenyicons": "^1.1.0",
     "@iconify/icons-vscode-icons": "^1.1.7",
