--- a/package.json
+++ b/package.json
@@ -5,31 +5,33 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
+    "@iconify/icons-akar-icons": "^1.2.8",
+    "@iconify/icons-logos": "^1.2.11",
+    "@iconify/icons-ri": "^1.2.3",
+    "@iconify/icons-simple-icons": "^1.2.19",
+    "@iconify/icons-teenyicons": "^1.2.3",
+    "@iconify/icons-vscode-icons": "^1.2.9",
+    "@iconify/react": "^3.2.2",
     "gray-matter": "^4.0.3",
-    "next": "11.1.3",
-    "next-themes": "^0.0.15",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.2.0",
+    "next": "12.2.2",
+    "next-themes": "^0.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "react-markdown": "5.0.3",
-    "react-syntax-highlighter": "^15.4.4",
-    "react-use": "^17.3.1"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
-    "@iconify/icons-akar-icons": "^1.1.23",
-    "@iconify/icons-logos": "^1.1.10",
-    "@iconify/icons-ri": "^1.1.0",
-    "@iconify/icons-simple-icons": "^1.1.45",
-    "@iconify/icons-teenyicons": "^1.1.0",
-    "@iconify/icons-vscode-icons": "^1.1.7",
-    "@iconify/react": "^3.0.1",
-    "@types/react": "17.0.27",
-    "@types/react-syntax-highlighter": "^13.5.2",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
-    "typescript": "4.4.3"
+    "@types/node": "18.0.6",
+    "@types/react": "18.0.15",
+    "@types/react-dom": "18.0.6",
+    "@types/react-syntax-highlighter": "^15.5.3",
+    "eslint": "8.20.0",
+    "eslint-config-next": "12.2.2",
+    "typescript": "4.7.4"
   }
 }
