--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-markdown": "5.0.3",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
