--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@iconify/icons-teenyicons": "^1.2.3",
     "@iconify/icons-vscode-icons": "^1.2.9",
     "@iconify/react": "^3.2.2",
+    "@vercel/analytics": "^0.1.11",
     "gray-matter": "^4.0.3",
     "next": "12.2.2",
     "next-themes": "^0.2.0",
