Blog placeholder images set

--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@iconify/react": "^3.2.2",
     "@vercel/analytics": "^0.1.11",
     "gray-matter": "^4.0.3",
-    "next": "12.2.2",
+    "next": "^13.2.4",
     "next-themes": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-markdown": "5.0.3",
     "react-syntax-highlighter": "^15.5.0",
@@ -34,7 +34,7 @@
     "@types/react-dom": "18.0.6",
     "@types/react-syntax-highlighter": "^15.5.3",
     "eslint": "8.20.0",
-    "eslint-config-next": "12.2.2",
+    "eslint-config-next": "^13.2.4",
     "typescript": "4.7.4"
   }
 }
