--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@iconify/icons-akar-icons": "^1.2.8",
     "@iconify/icons-bi": "^1.2.15",
-    "@iconify/icons-logos": "^1.2.11",
+    "@iconify/icons-logos": "^1.2.33",
     "@iconify/icons-ri": "^1.2.9",
     "@iconify/icons-simple-icons": "^1.2.59",
     "@iconify/icons-teenyicons": "^1.2.3",
@@ -29,6 +29,9 @@
     "sharp": "^0.32.2"
   },
   "devDependencies": {
+    "@iconify/icons-devicon": "^1.2.13",
+    "@iconify/icons-eos-icons": "^1.2.6",
+    "@iconify/icons-skill-icons": "^1.2.1",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
