chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -3,41 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbopack",
+    "build": "next build --turbopack",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint"
   },
   "dependencies": {
-    "@iconify/icons-akar-icons": "^1.2.8",
-    "@iconify/icons-bi": "^1.2.15",
-    "@iconify/icons-logos": "^1.2.33",
-    "@iconify/icons-ri": "^1.2.9",
-    "@iconify/icons-simple-icons": "^1.2.59",
-    "@iconify/icons-teenyicons": "^1.2.3",
-    "@iconify/icons-vscode-icons": "^1.2.9",
-    "@iconify/react": "^4.1.1",
-    "@vercel/analytics": "^1.0.1",
+    "@iconify/icons-akar-icons": "^1.2.19",
+    "@iconify/icons-bi": "^1.2.19",
+    "@iconify/icons-logos": "^1.2.36",
+    "@iconify/icons-ri": "^1.2.10",
+    "@iconify/icons-simple-icons": "^1.2.74",
+    "@iconify/icons-teenyicons": "^1.2.4",
+    "@iconify/icons-vscode-icons": "^1.2.29",
+    "@iconify/react": "^6.0.2",
+    "@vercel/analytics": "^1.5.0",
     "gray-matter": "^4.0.3",
-    "next": "^13.4.9",
-    "next-themes": "^0.2.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
-    "react-markdown": "8.0.7",
-    "react-syntax-highlighter": "^15.5.0",
-    "sharp": "^0.32.2"
+    "gsap": "^3.13.0",
+    "next": "15.5.4",
+    "next-themes": "^0.4.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.6",
+    "shadcn": "^3.3.1",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
-    "@iconify/icons-devicon": "^1.2.13",
+    "@eslint/eslintrc": "^3",
+    "@iconify/icons-devicon": "^1.2.17",
     "@iconify/icons-eos-icons": "^1.2.6",
     "@iconify/icons-skill-icons": "^1.2.1",
-    "@types/node": "20.4.2",
-    "@types/react": "18.2.15",
-    "@types/react-dom": "18.2.7",
-    "@types/react-syntax-highlighter": "^15.5.3",
-    "eslint": "8.44.0",
-    "eslint-config-next": "^13.4.9",
-    "typescript": "5.1.6"
+    "@tailwindcss/postcss": "^4",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.4",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
